added more questions

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <option value="all">All Available</option>
                 </select>
             </div>
-            <button id="shuffleBtn" onclick="shuffleQuestions()" class="control-btn">🔀 Shuffle</button>
-            <button id="resetBtn" onclick="resetSession()" class="control-btn">🔄 Reset</button>
+            <button id="shuffleBtn" onclick="shuffleQuestions()" class="control-btn">Shuffle</button>
+            <button id="resetBtn" onclick="resetSession()" class="control-btn">Reset</button>
         </div>
         
         <div class="stats-board">
@@ -90,14 +90,14 @@
             <h2>🎉 Session Complete!</h2>
             <div id="finalStats"></div>
             <div class="completion-actions">
-                <button onclick="reviewMissedQuestions()" class="action-btn">📝 Review Missed</button>
-                <button onclick="startSession()" class="action-btn">🔄 Practice Again</button>
-                <button onclick="exportResults()" class="action-btn">📊 Export Results</button>
+                <button onclick="reviewMissedQuestions()" class="action-btn">Review Missed</button>
+                <button onclick="startSession()" class="action-btn">Practice Again</button>
+                <button onclick="exportResults()" class="action-btn">Export Results</button>
             </div>
         </div>
         
         <div id="reviewMode" class="review-container" style="display: none;">
-            <h3>📝 Review Missed Questions</h3>
+            <h3>Review Missed Questions</h3>
             <div id="reviewContent"></div>
             <button onclick="exitReview()" class="control-btn">Exit Review</button>
         </div>
