--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🏆 VCLA Mastery Challenge</h1>
+            <h1 style="color: white;">🏆 VCLA Mastery Challenge</h1>
             <div class="subtitle">Interactive Study Application</div>
             <div class="challenge-badge">⚡ ADAPTIVE LEARNING ⚡</div>
         </div>
@@ -49,8 +49,8 @@
                     <option value="all">All Available</option>
                 </select>
             </div>
-            <button id="shuffleBtn" onclick="shuffleQuestions()" class="control-btn">Shuffle</button>
-            <button id="resetBtn" onclick="resetSession()" class="control-btn">Reset</button>
+            <button id="shuffleBtn" style="color: #000" onclick="shuffleQuestions()" class="control-btn">Shuffle</button>
+            <button id="resetBtn" style="color: #000" onclick="resetSession()" class="control-btn">Reset</button>
         </div>
         
         <div class="stats-board">
